/*
 * $Id: ChangeLog,v 1.1782 2003/11/27 00:38:35 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-11-27 01:38 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * tests/mtstress.c
    + Put non-working code under #ifdef clause. Currently, it is JUST
      RDD related code.

2003-11-27 00:55 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/thread.c
    ! A too fast cut & paste, and I did wrong mutex allocation size.
      Fixed.

  * tests/mtstress.c
    + Added a cmd line parameter that disables screen output to rise
      concurrency.

2003-11-26 22:35 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! source/rdd/dbcmd.c
    % Fixed an problem with alias on linux with dbusearea function
      Set of alias on linux was wrong if no alias was passed
      on windows data/dbf/test.dbf return test as alias
      on linux  data\dbf\test.dbf return data\dbf\test as alias
      this was fixed.
      Reported by Renato Benedetti

2003-11-26 22:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! utils/hbmake/hbmake.prg
    % minor fix

2003-11-27 00:15 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hash.c
    % rationalization of garbage reclaim routine.

  * tests/hashmass.prg
    * visual adjustments

2003-11-27 00:03 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * source/vm/classes.c
    * hb_objSendMessage now returns the VM Return pointer so that it can
      be used in non-thread specivic 3d party libs to access object
      properties and method call results.
    - removed hb_obj(Get|Set)PropValue

2003-11-26 22:59 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * include/hbapiitm.h
  * include/hbvmpub.h
  * source/vm/classes.c
  * source/vm/extend.c