@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1782 2003/11/27 00:38:35 lculik Exp $
+ * $Id: ChangeLog,v 1.1783 2003/11/27 00:40:30 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,15 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-11-27 14:18 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini@tin.it>
+  * source/rtl/filesys.c
+    + small modification to #ifdefs to support OpenWatcom
+  * source/vm/itemapi.c
+    + small modification to #ifdefs to support OpenWatcom
+  * config/dos/watcom.cf
+    + a smaller HB_FLAGS for OpenWatcom/DOS32 
+  * config/w32/watcom.cf
+    + modified for OpenWatcom/W32 ( still not working )
 
 2003-11-27 01:38 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * tests/mtstress.c
